Set min-width on tooltip to prevent overflow

--- a/core/static/core/css/custom.css
+++ b/core/static/core/css/custom.css
@@ -444,7 +444,7 @@
 [data-tooltip]:after {
   z-index: 1000;
   padding: 8px;
-  width: 120px;
+  min-width: 120px;
   text-align: center;
   background-color: #000;
   background-color: hsla(0, 0%, 20%, 0.9);
